<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="_0">0</string>
    <string name="_1_set">1 Set</string>
    <string name="_10_points">10 Points</string>
    <string name="_3_sets">3 Sets</string>
    <string name="_5_sets">5 Sets</string>
    <string name="_7_points">7 Points</string>
    <string name="_b_">P+</string>
    <string name="_z">" "</string>
    <string name="A">A</string>
    <string name="a">a</string>
    <string name="about">About SCaT</string>
    <string name="about_scat">About SCaT</string>
    <string name="about_scorer_tennis">About Scorer Tennis</string>
    <string name="action_clock">Clock</string>
    <string name="action_exit">Quit</string>
    <string name="action_reset">Reset</string>
    <string name="action_results">Results</string>
    <string name="action_setup">Setup</string>
    <string name="ad">AD</string>
    <string name="add">Add</string>
    <string name="adv">Adv</string>
    <string name="adv_l_set">Advantage Last Set</string>
    <string name="adv_set_s">Adv Set(s)</string>
    <string name="adv_sets">Advantage Sets</string>
    <string name="advantage">Advantage</string>
    <string name="advantage_game">Advantage Game</string>
    <string name="advantage_set">Advantage Set</string>
    <string name="advsets">Adv Set(s)</string>
    <string name="app_name">Scorer Tennis</string>
    <string name="b">B</string>
    <string name="b_">P-</string>
    <string name="battery">Battery Setup</string>
    <string name="c">C</string>
    <string name="cancel">Cancel</string>
    <string name="clear_log">Clear Log</string>
    <string name="close">Close</string>
    <string name="close_app">Close App</string>
    <string name="connecting">Connecting</string>
    <string name="connecting_to_wifi">Connecting to WiFi</string>
    <string name="cont">Continue without WiFi</string>
    <string name="d_t_text">\n Go to <b>Date &amp; Time Icon</b> on the Tablet Home Screen.\n</string>
    <string name="digits">No. of Digits</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="enable_wifi">Enable WiFi</string>
    <string name="exit_app">Exit App</string>
    <string name="fast4">FAST4</string>
    <string name="fast4_format">FAST4 Format</string>
    <string name="forty">40</string>
    <string name="g">G</string>
    <string name="game">Game</string>
    <string name="game_adv">Game_Adv</string>
    <string name="Game_Rules">Set up Game Rules</string>
    <string name="game_tb_home">Game Tb Home</string>
    <string name="game_tb_visitor">Game Tb Visitor</string>
    <string name="games">Games</string>
    <string name="h">H</string>
    <string name="home">Home</string>
    <string name="increment_">Increment %</string>
    <string name="last_set">Last Set</string>
    <string name="last_set_tb">Last Set Tb</string>
    <string name="lastsetadv">Last Set Adv</string>
    <string name="lastsettb">Last Set Tb</string>
    <string name="log">Log</string>
    <string name="logging">Log</string>
    <string name="m">M</string>
    <string name="match">Match</string>
    <string name="match_tb_game">Match Tb Game</string>
    <string name="match_tie_break_game">Match Tie Break Game</string>
    <string name="mode">System Mode</string>
    <string name="name">Name</string>
    <string name="no">No</string>
    <string name="no_adv_set_s">No Adv Set(s)</string>
    <string name="no_advantage_game_sudden_death_deuce">No Advantage Game (Sudden Death Deuce)</string>
    <string name="no_digits">No. of Digits</string>
    <string name="no_of_sets_in_a_match">No. of Sets in a Match</string>
    <string name="not_yet_selected">Not yet Selected</string>
    <string name="ok">OK</string>
    <string name="onefive">15</string>
    <string name="oo">00</string>
    <string name="open_name_a">Open Name A Window</string>
    <string name="open_name_b">Open Name B Window</string>
    <string name="open_results">Open Results</string>
    <string name="open_rules">Open Rules</string>
    <string name="open_setup">Open Setup Menu</string>
    <string name="parameters">Parameters</string>
    <string name="password">Password</string>
    <string name="points">Points</string>
    <string name="quit">Quit</string>
    <string name="really_reset">You REALLY want to Reset everything?</string>
    <string name="reset">Reset</string>
    <string name="resume_app">Resume App</string>
    <string name="rules_of_tennis">Rules of Tennis</string>
    <string name="s">S</string>
    <string name="scorer">scorer_</string>
    <string name="scorer_product_liability_disclaimer">Scorer Product Liability Disclaimer</string>
    <string name="Scores_Man">Set Scores Manually</string>
    <string name="sdcard">/root/sdcard/f87297.azc</string>
    <string name="server">Server</string>
    <string name="set_1">Set 1</string>
    <string name="set_2">Set 2</string>
    <string name="set_3">Set 3</string>
    <string name="set_4">Set 4</string>
    <string name="set_5">Set 5</string>
    <string name="set_system_date_time">Set System Date &amp; Time</string>
    <string name="set_the_server">Set the Server</string>
    <string name="set1">1 Set</string>
    <string name="set3">3 Sets</string>
    <string name="set5">5 Sets</string>
    <string name="sets">Sets</string>
    <string name="sets_adv">Sets Adv</string>
    <string name="sets_tb">Sets Tb</string>
    <string name="setup_actions">Setup Actions</string>
    <string name="setup_battery_test_parameters">Setup Battery Test Parameters</string>
    <string name="Setup_digits">Setup No. of Digits</string>
    <string name="short_set_s">Short Set(s)</string>
    <string name="short_sets">Short Sets</string>
    <string name="shortsets">Short Sets</string>
    <string name="space" />
    <string name="SSID_Scorer">SSID Scorer_</string>
    <string name="start_app">Start App</string>
    <string name="stop_test">Stop Test</string>
    <string name="store">Store</string>
    <string name="suddeath">Sudden Death Deuce</string>
    <string name="t_d_text">\n\nTo set the Time and Date, exit Scorer and go to Date and Time Settings App</string>
    <string name="tb">Tie Break</string>
    <string name="tb_l_set">Tie Break Last Set</string>
    <string name="tb_sets">Tie Break Sets</string>
    <string name="tb10">Match Tie Break Game 10 Points</string>
    <string name="tb7">Match Tie Break Game 7 Points</string>
    <string name="tbsets">Tb Set(s)</string>
    <string name="test">Test</string>
    <string name="test_the_scoreboard">Test the Scoreboard</string>
    <string name="thirty">30</string>
    <string name="threshold_value_">Threshold Value %</string>
    <string name="tie_break_game">Tie Break Game</string>
    <string name="tie_break_set">Tie Break Set</string>
    <string name="time_and_date">Time and Date</string>
    <string name="type_of_set">Type of Set</string>
    <string name="v">V</string>
    <string name="visitors">Visitors</string>
    <string name="wifi">WiFi Setup</string>
    <string name="wifi_connected">WiFi Connected</string>
    <string name="wifi_disabled">WiFi Disabled</string>
    <string name="wifi_enabled">WiFi Enabled</string>
    <string name="wifi_not_connected">WiFi not connected</string>
    <string name="wifi_not_connected_1">WiFi Not Connected</string>
    <string name="wifi_not_found">WiFi not found</string>
    <string name="wifi_param">Setup WiFi Parameters</string>
    <string name="x">X</string>
    <string name="z">Z</string>

    <string name="about_text" translatable="false"><b>Score, Count and Time</b> \n\n
Score Count and Time (SCaT) is a young company which specialises in the development and supply of bright, daylight visible displays which meet the needs of the strong sunlight of the great Australian outdoors. \n\n
If you need a display which shows you the Score, the Count or the Time for an event, then please contact us for more details on how our unique solutions are winning so many customers. \n\n
Geoff Champion , former supervising engineer with the Telecom Research Laboratories , John Perrin , former Director of Motorola Australia , and Mr Stuart Wright former owner of Daneva Electronics have pooled their experience and expertise to develop cost effective , smart displays and scoreboards. \n\n
Please contact us by: \n \t   email at <b>enquiries@score-count-time.com</b> \n \t or by phone on <b>0407 301 239</b>. \n
</string>

    <string name="disclaimer_text"><b>TERMS OF USE, WARRANTY AND LIABILITY WAIVER</b> \n\n
The SCaT “Scorer Wireless Scoreboard System” comes with the following terms , conditions and notices: \n
<b>Terms of Use:</b> \n
This product is offered to you based on your acceptance of the system without modification. \n
<b>Use Limitation:</b> \n
You may not modify, copy, distribute, transmit, reproduce, license, create derivative versions from, transfer, or sell, any information , software , products or services obtained from SCaT or the “Scorer Wireless Scoreboard System”. \n
<b>One Year Warranty:</b> \n
This system is warranted against any manufactured defect for a period of twelve months from the date of installation. \n
<b>Limitation of Liability:</b> \n
In no event shall SCaT be liable for any direct, indirect, punitive, incidental, special consequential damages whatsoever arising out of or connected with the use or misuse of the “Scorer Wireless Scoreboard System”. \n
<b>Copyright:</b> \n
All material in the SCaT “Scorer Wireless Scoreboard System” is copyrighted. It is made available to give users easy and quick access to information. \n
You may download material from our web site for your own personal non-commercial use only. \n
You may not alter, reproduce, re-transmit, distribute, display or commercialise the material in any way without written permission from SCaT. \n
<b>General:</b> \n
This disclaimer statement is governed by the laws of the state of Victoria, Australia. \n
</string>
    <string name="_4_games_all_then_tb">4 Games All then Tb</string>
    <string name="_3_games_all_then_tb">3 Games All then Tb</string>
    <string name="no_adv">No Adv</string>
<!--//    <string name="short_sets">Short Sets</string>-->
    <string name="ss_3">Short Sets - 3 Games All then Tb</string>
    <string name="ss_4">Short Sets - 4 Games All then Tb</string>
    <string name="reset1">Reset!</string>
    <string name="set_display_no">Set Display No.</string>
    <string name="set_club_and_system_details">Set Club and System Details</string>
    <string name="rod_laver">Rod Laver</string>
    <!--//    <string name="fast4_format">FAST4 Format</string>-->

</resources>