<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="770dp"
    android:layout_height="500dp"
    android:background="@color/grey">

    <TextView
        android:id="@+id/rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/grey"
        android:text="@string/Game_Rules"
        android:textColor="#0000ff"
        android:textSize="@dimen/f_text_30" />

    <LinearLayout
        android:id="@+id/leftCol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rules"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/head_No_Sets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="00dp"
            android:layout_marginTop="00dp"
            android:text="@string/no_of_sets_in_a_match"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup_No_Sets"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton_1_Set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:onClick="onClick_1_Set"
                android:text="@string/_1_set"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radioButton_3_Set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:onClick="onClick_3_Set"
                android:text="@string/_3_sets"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radioButton_5_Set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:onClick="onClick_5_Set"
                android:text="@string/_5_sets"
                android:textColor="@color/black" />

        </RadioGroup>

        <TextView
            android:id="@+id/head_Type_of_Set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="00dp"
            android:text="@string/type_of_set"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup_Type_of_Set"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton_Adv_Set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:checked="true"
                android:onClick="onClick_Advantage"
                android:text="@string/advantage_set"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radioButton_Tb_Set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:onClick="onClick_TieBreak"
                android:text="@string/tie_break_set"
                android:textColor="@color/black" />

        </RadioGroup>

        <TextView
            android:id="@+id/head_last_set_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="00dp"
            android:text="@string/last_set"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup_last_set_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton_LS_Adv_Set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:checked="true"
                android:onClick="onClick_Ls_Advantage"
                android:text="@string/advantage_set"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radioButton_LS_Tb_Set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:onClick="onClick_Ls_TieBreak"
                android:text="@string/tie_break_set"
                android:textColor="@color/black" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rightCol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rules"
        android:layout_marginStart="200dp"
        android:layout_toEndOf="@+id/leftCol"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkBox_No_Adv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:height="-10dp"
            android:onClick="onClick_No_Adv"
            android:text="@string/no_advantage_game_sudden_death_deuce"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/checkBox_Short_Sets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClick_Short_Sets"
            android:text="@string/short_sets"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/radioGroup_Short_Sets"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/radioButton_4_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:onClick="onClick_4_Games"
                android:text="@string/_4_games_all_then_tb"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radioButton_3_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:onClick="onClick_3_Games"
                android:text="@string/_3_games_all_then_tb"
                android:textColor="@color/black" />

        </RadioGroup>

<!--        <CheckBox-->
<!--            android:id="@+id/checkBox_Fast4"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="0dp"-->
<!--            android:onClick="onClick_Fast4"-->
<!--            android:text="@string/fast4_format"-->
<!--            android:visibility="invisible"-->
<!--            android:textColor="@color/black" />-->

        <CheckBox
            android:id="@+id/checkBox_Match_Tb_Game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClick_Mtb"
            android:text="@string/match_tie_break_game"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/radioGroup_Match_Tb_Game"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/radioButton_7_Points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:onClick="onClick_7_Points"
                android:text="@string/_7_points"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radioButton_10_Points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:onClick="onClick_10_Points"
                android:text="@string/_10_points"
                android:textColor="@color/black" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/b_ok"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/b_bott_size"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="323dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button1"
        android:onClick="onClick_Store"
        android:text="@string/store"
        android:textSize="@dimen/f_text_15" />

</RelativeLayout>