<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.scorer.tennis.MainActivity" >

    <item android:id="@+id/action_rules"
        android:title="Rules of Tennis"
        android:actionLayout="@layout/action_bar_rules"
        android:showAsAction="always" />

    <item android:id="@+id/action_space"
        android:title="            "
        android:actionLayout="@layout/action_bar_space"
        android:showAsAction="always" />

    <item android:id="@+id/action_reset"
        android:title="@string/action_reset"
        android:actionLayout="@layout/action_bar_reset"
        android:showAsAction="always" />

    <item android:id="@+id/action_results"
        android:title="Results"
        android:actionLayout="@layout/action_bar_results"
        android:showAsAction="always" />

    <item android:id="@+id/action_setup"
          android:title="@string/action_setup"
          android:actionLayout="@layout/action_bar_setup"
          android:showAsAction="always" />

    <item android:id="@+id/action_exit"
          android:title="@string/action_exit"
          android:actionLayout="@layout/action_bar_exit"
          android:showAsAction="always" />

    <item android:id="@+id/clock"
          android:actionLayout="@layout/action_bar_clock"
          android:showAsAction="always" />

</menu>
